[package]
name = "advent-of-code-2020-day-01"
version = "0.1.0"
authors = ["Mark English <mark.english@anaplan.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argh = "0.1.4"
anyhow = "1.*"
thiserror = "1.0.22"
compare = "*"
parameterized = "*"